@@ -1,5 +1,6 @@
 [B]0.9.9[/B]
 Add FPS icon and indicator on videoosd info
+Add trailer/extras fake fullscreen from info
 
 [B]0.9.8[/B]
 Fix NextUp in info bug
